# mosaic

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: mosaic.py  utils.py
